Implement basic crop functionality for gym ticket

--- a/client/src/app/features/gym-ticket/gym-ticket.component.html
+++ b/client/src/app/features/gym-ticket/gym-ticket.component.html
@@ -4,8 +4,8 @@
     @if (isCropping) {
       <image-cropper
         [imageBase64]="ticketImage"
+        [maintainAspectRatio]="false"
         (imageCropped)="imageCropped($event)"
-        [maintainAspectRatio]="true"
         format="png"
       />
     } @else {
