Add on confirm and on toggle view interfaces for modal + use them

--- a/client/src/app/features/training-plans/training-view/create-training-form/create-training-form.component.html
+++ b/client/src/app/features/training-plans/training-view/create-training-form/create-training-form.component.html
@@ -33,7 +33,7 @@
   <div class="row no-gutters">
     <div class="col-md-12">
       <div class="card-body">
-        <form [formGroup]="trainingForm" (ngSubmit)="onSubmit()">
+        <form [formGroup]="trainingForm">
           <div class="form-group text-center mb-4 position-relative">
             <img
               #coverImage
