--- a/client/src/app/features/training-plans/edit-training-plan/edit-training-plan.component.html
+++ b/client/src/app/features/training-plans/edit-training-plan/edit-training-plan.component.html
@@ -8,7 +8,7 @@
   <div class="row no-gutters">
     <div class="col-md-12">
       <div class="card-body">
-        <form [formGroup]="trainingForm" (ngSubmit)="onSubmit()">
+        <form [formGroup]="trainingForm" (ngSubmit)="onConfirm()">
           <div class="form-group text-center mb-4 position-relative">
             <img
               #coverImage
