--- a/client/src/app/features/training-plans/training-view/auto-progression/auto-progression.component.html
+++ b/client/src/app/features/training-plans/training-view/auto-progression/auto-progression.component.html
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-md-12">
     <div class="card-body">
-      <form [formGroup]="autoProgressionForm" (ngSubmit)="onSubmit()">
+      <form [formGroup]="autoProgressionForm" (ngSubmit)="onConfirm()">
         <!-- RPE Progression per Week -->
         <div class="form-floating mb-4">
           <select id="rpe_progression" class="form-control" formControlName="rpeProgression" required>
