--- a/client/src/app/features/training-plans/training-view/training-view.component.scss
+++ b/client/src/app/features/training-plans/training-view/training-view.component.scss
@@ -66,6 +66,10 @@ form {
     content: attr(data-cell) ': ';
   }
 
+  .training-table tr:first-child {
+    border: none;
+  }
+
   .training-table tr {
     border-top: 4px solid rgb(216, 216, 216);
   }
