--- a/client/src/app/features/auth/register/register.component.html
+++ b/client/src/app/features/auth/register/register.component.html
@@ -2,7 +2,7 @@
 <section class="container forms">
   <div class="form signup">
     <div class="form-content">
-      <header>Signup</header>
+      <header>Register</header>
       <form (submit)="onSubmit($event)">
         <div class="field input-field">
           <input type="text" placeholder="Username" name="username" class="input" />
@@ -32,7 +32,7 @@
           }
         </div>
         <div class="field button-field">
-          <button>Signup</button>
+          <button>Register</button>
         </div>
       </form>
       <div class="form-link mt-3">
