--- a/client/src/app/shared/icon/icon.component.html
+++ b/client/src/app/shared/icon/icon.component.html
@@ -148,6 +148,25 @@
       <circle cx="12" cy="8" r="7"></circle>
       <polyline points="8.21 13.89 7 23 12 20 17 23 15.79 13.88"></polyline>
     }
+    @case (IconName.MOVE) {
+      <polyline points="5 9 2 12 5 15"></polyline>
+      <polyline points="9 5 12 2 15 5"></polyline>
+      <polyline points="15 19 12 22 9 19"></polyline>
+      <polyline points="19 9 22 12 19 15"></polyline>
+      <line x1="2" y1="12" x2="22" y2="12"></line>
+      <line x1="12" y1="2" x2="12" y2="22"></line>
+    }
+    @case (IconName.SLIDERS) {
+      <line x1="4" y1="21" x2="4" y2="14"></line>
+      <line x1="4" y1="10" x2="4" y2="3"></line>
+      <line x1="12" y1="21" x2="12" y2="12"></line>
+      <line x1="12" y1="8" x2="12" y2="3"></line>
+      <line x1="20" y1="21" x2="20" y2="16"></line>
+      <line x1="20" y1="12" x2="20" y2="3"></line>
+      <line x1="1" y1="14" x2="7" y2="14"></line>
+      <line x1="9" y1="8" x2="15" y2="8"></line>
+      <line x1="17" y1="16" x2="23" y2="16"></line>
+    }
 
     @default {
       <path d="M0 0h24v24H0z" fill="none"></path>
