--- a/client/src/app/features/training-plans/training-plans/training-plans.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.html
@@ -19,12 +19,14 @@
             </div>
           } @else {
             @for (trainingPlan of filteredTrainingPlans; track trainingPlan) {
-              <div [ngClass]="columnClass" cdkDrag>
+              <div class="training-plan-card-container" [ngClass]="columnClass" cdkDrag>
                 <app-training-plan-card
                   [trainingPlan]="trainingPlan"
                   [columnClass]="columnClass"
                   (changedPlanConstellation)="loadTrainingPlans()"
                 />
+
+                <app-circular-icon-button [iconSize]="18" cdkDragHandle [icon]="IconName.SLIDERS" />
               </div>
             }
           }
