--- a/client/src/app/features/gym-ticket/gym-ticket.component.scss
+++ b/client/src/app/features/gym-ticket/gym-ticket.component.scss
@@ -7,10 +7,15 @@
 
 .ticket-image {
   max-width: 100%;
-  max-height: 100%;
+  height: 25rem;
   object-fit: contain;
   border: 2px dashed #cccccc;
   border-radius: 10px;
+}
+
+image-cropper.ticket-image {
+  display: grid;
+  place-items: center;
 }
 
 image-cropper {
