--- a/client/src/app/shared/icon/icon.component.html
+++ b/client/src/app/shared/icon/icon.component.html
@@ -167,6 +167,11 @@
       <line x1="9" y1="8" x2="15" y2="8"></line>
       <line x1="17" y1="16" x2="23" y2="16"></line>
     }
+    @case (IconName.LOG_OUT) {
+      <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+      <polyline points="16 17 21 12 16 7"></polyline>
+      <line x1="21" y1="12" x2="9" y2="12"></line>
+    }
 
     @default {
       <path d="M0 0h24v24H0z" fill="none"></path>
