--- a/client/src/app/shared/components/more-options-button/more-options-button.component.scss
+++ b/client/src/app/shared/components/more-options-button/more-options-button.component.scss
@@ -2,11 +2,11 @@
   position: relative;
 }
 
-.custom-dropdown {
+.more-option-list-container {
   position: absolute;
   border: 1px solid #ccc;
   border-radius: 8px;
-  width: 150px;
+  max-width: 150px;
   background-color: rgba(240, 240, 240, 0.925);
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 1000;
@@ -30,6 +30,9 @@
       cursor: pointer;
       background-color: inherit;
       border-bottom: 1px solid #ccc;
+      display: flex;
+      gap: 10px;
+      align-items: center;
 
       &:hover {
         background-color: #f0f0f0;
