Fix open pause time modal + add commented out scratch for inline rest timer

--- a/client/src/app/features/training-plans/training-view/training-view.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view.component.html
@@ -129,6 +129,10 @@
     </table>
   </form>
 
+  <!--   <div class="rest-pause-time-indicator" (click)="switchToTimerView()">
+    {{ pauseTimeService.remainingTime | formatTime }}
+  </div> -->
+
   @if (!mobileView) {
     <div class="fixed-bottom-bar">
       <app-icon [name]="IconName.ArrowLeft" [size]="24" (click)="navigateWeek(-1)" />
