--- a/client/src/app/shared/components/nav-bar/nav-bar.component.scss
+++ b/client/src/app/shared/components/nav-bar/nav-bar.component.scss
@@ -24,12 +24,31 @@
   justify-content: center;
   color: #6c757d;
   transition: color 0.3s;
+  position: relative;
+
+  .notification-badge {
+    position: absolute;
+    top: -7.5px;
+    right: -7.5px;
+    background-color: var(--accent-color);
+    color: white;
+    padding: 2px;
+    font-size: 0.75rem;
+    font-weight: bold;
+    min-width: 24px;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+  }
+
+  &:hover {
+    color: white;
+  }
 }
 
 .nav-item .nav-label {
   margin-top: 5px;
   font-size: 13px;
-  color: #6c757d;
 }
 
 .nav-item.active .nav-label,
