--- a/client/src/app/features/usage-statistics/usage-statistics.component.html
+++ b/client/src/app/features/usage-statistics/usage-statistics.component.html
@@ -9,14 +9,7 @@
       [barChartDataSets]="recentTrainingDurations.chartData"
     />
 
-    @if (trainingDayNotifications$ | async; as trainingDayNotifications) {
-      <app-training-day-notification [notificationsInput]="trainingDayNotifications" />
-    } @else {
-      <main class="mt-3">
-        <app-chart-skeleton />
-        <app-chart-skeleton />
-      </main>
-    }
+    <app-training-day-notification [notificationsInput]="notificationService.trainingDayNotifications()" />
   } @else {
     <main class="mt-3">
       <app-chart-skeleton />
