--- a/client/src/app/features/training-plans/training-plans/training-plans.component.scss
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.scss
@@ -4,12 +4,6 @@
   gap: 10px;
 }
 
-.training-plan-search-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
 .training-plan-card-container {
   position: relative;
   color: white;
@@ -28,23 +22,23 @@
 }
 
 .cdk-drag-preview {
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  opacity: 0.9;
-  transform: scale(1.05);
-}
-
-.cdk-drop-list-dragging .training-plan-card-container {
-  opacity: 0.5;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+  transform: scale(1.1);
+  border-radius: 8px;
 }
 
 @media screen and (max-width: 768px) {
-  .row > * {
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-  }
-
   .container.heading-container {
     padding-left: 0;
     padding-right: 0;
+  }
+
+  .training-plan-card-container {
+    touch-action: manipulation;
+    transform: none;
+  }
+
+  .cdk-drag-preview {
+    transform: none;
   }
 }
