--- a/client/src/app/shared/components/more-options-button/more-options-button.component.html
+++ b/client/src/app/shared/components/more-options-button/more-options-button.component.html
@@ -3,7 +3,7 @@
 <div class="more-option-list-container" [@toggleCollapse]="isCollapsed() ? 'collapsed' : 'expanded'">
   <ul>
     @for (option of options(); track option) {
-      <li (click)="selectOption(option.label)">
+      <li (click)="selectOption(option)">
         @if (option.icon) {
           <app-icon [name]="option.icon" [size]="17" />
         }
