--- a/client/src/app/shared/components/search-bar/search-bar.component.scss
+++ b/client/src/app/shared/components/search-bar/search-bar.component.scss
@@ -5,6 +5,7 @@
   margin-bottom: 0.65rem;
   background-color: rgba(249, 249, 249, 0.8);
   border-bottom: 2px solid #d5d5d5;
+  padding-inline: 1rem;
 }
 
 .clear-search-bar-icon:hover {
@@ -19,7 +20,6 @@
   font-size: 1rem;
   background: inherit;
 
-  /* Hover state styles */
   transition:
     background-color 0.2s ease-in-out,
     border-color 0.2s ease-in-out;
