--- a/client/src/app/features/training-plans/training-view/create-training/create-training.component.scss
+++ b/client/src/app/features/training-plans/training-view/create-training/create-training.component.scss
@@ -4,6 +4,14 @@
 
 #cover-image {
   cursor: pointer;
+  width: 100%;
+  object-fit: cover;
+  margin-bottom: 1.5rem;
+  height: 12rem;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 #cover-image-input {
