Add first scratchs of input component + improve create training form

--- a/client/src/app/features/training-plans/training-plans/training-plans.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.html
@@ -1,26 +1,19 @@
-@if (trainingPlans$ | async; as allTrainingPlans) {
-  <div class="search-bar-container" [@toggleCollapse]="searchBarCollapsed() ? 'collapsed' : 'expanded'">
-    <app-search-bar [(searchQuery)]="trainingPlanSearchQuery" />
-  </div>
+<div class="search-bar-container" [@toggleCollapse]="searchBarCollapsed() ? 'collapsed' : 'expanded'">
+  <app-search-bar [(searchQuery)]="trainingPlanSearchQuery" />
+</div>
 
-  <div class="row" cdkDropList (cdkDropListDropped)="updateTrainingPlanOrder($event)">
+<div class="row" cdkDropList (cdkDropListDropped)="updateTrainingPlanOrder($event)">
+  @if (trainingPlans$ | async; as allTrainingPlans) {
     @if (filteredTrainingPlans$ | async; as filteredTrainingPlans) {
-      @if (filteredTrainingPlans.length === 0 && allTrainingPlans.length === 0) {
-        <div class="col-12">
-          <app-alert
-            alertType="light"
-            alertText="Du hast noch keine eigenen Trainingspläne erstellt. Erstelle welche mit dem Button oben!"
-          />
-        </div>
+      @if (allTrainingPlans.length === 0) {
+        <app-alert
+          alertType="light"
+          alertText="Du hast noch keine eigenen Trainingspläne erstellt. Erstelle welche mit dem Button oben!"
+        />
       } @else if (filteredTrainingPlans.length === 0) {
-        <div class="col-12">
-          <app-alert
-            alertType="light"
-            alertText="Keine deiner bestehenden Trainingpläne passen zu dieser Suchanfrage!"
-          />
-        </div>
+        <app-alert alertType="light" alertText="Keine deiner bestehenden Trainingpläne passen zu dieser Suchanfrage!" />
       } @else {
-        @for (trainingPlan of filteredTrainingPlans; track trainingPlan) {
+        @for (trainingPlan of filteredTrainingPlans; track trainingPlan.id) {
           <div class="training-plan-card-container" [ngClass]="columnClass" cdkDrag>
             <app-training-plan-card
               [trainingPlan]="trainingPlan"
@@ -33,17 +26,11 @@
         }
       }
     }
-  </div>
-} @else {
-  <section id="gallery">
-    <div class="container">
-      <div class="row">
-        @for (k of [1, 2, 3]; track k) {
-          <div [ngClass]="columnClass">
-            <app-skeleton-card />
-          </div>
-        }
+  } @else {
+    @for (k of [1, 2, 3]; track k) {
+      <div [ngClass]="columnClass">
+        <app-skeleton-card />
       </div>
-    </div>
-  </section>
-}
+    }
+  }
+</div>
