--- a/client/src/app/shared/components/form-input/form-input.component.html
+++ b/client/src/app/shared/components/form-input/form-input.component.html
@@ -1,2 +1,10 @@
-<label for="customInput">{{ label() }}</label>
-<input id="customInput" type="text" [value]="value()" placeholder="{{ placeholder() }}" />
+<input
+  id="customInput"
+  type="text"
+  [value]="value()"
+  [placeholder]="placeholder()"
+  [class.filled]="value()"
+  (focus)="onFocus()"
+  (blur)="onBlur()"
+/>
+<label for="customInput" [class.floating]="value() || isFocused">{{ label() }}</label>
