--- a/client/src/app/shared/components/form-input/form-input.component.scss
+++ b/client/src/app/shared/components/form-input/form-input.component.scss
@@ -1,24 +1,41 @@
 :host {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-
-  label {
-    font-size: 14px;
-    margin-bottom: 4px;
-    color: #666;
-  }
+  position: relative;
+  margin-bottom: 1.5rem;
 
   input {
-    padding: 8px 12px;
-    font-size: 16px;
+    width: 100%;
+    padding: 0.75rem;
     border: 1px solid #ccc;
-    border-radius: 4px;
-    transition: border-color 0.3s ease;
+    border-radius: 8px;
+    font-size: 16px;
+    background: transparent;
+    transition:
+      border-color 0.2s,
+      padding-top 0.2s;
+  }
 
-    &:focus {
-      border-color: #3498db;
-      outline: none;
-    }
+  label {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    transition: 0.2s ease all;
+    font-size: 16px;
+    color: #888;
+    pointer-events: none;
+  }
+
+  input:focus {
+    border-color: #336b87;
+    outline: none;
+    box-shadow: 0 0 5px rgba(63, 81, 181, 0.5);
+  }
+
+  input:focus + label,
+  input.filled + label {
+    top: -10px;
+    left: 5px;
+    font-size: 14px;
+    border-color: grey;
   }
 }
