Add documentatino for floatin input

--- a/client/src/app/features/training-plans/training-view/create-training/create-training.component.html
+++ b/client/src/app/features/training-plans/training-view/create-training/create-training.component.html
@@ -52,7 +52,7 @@
 
           <!-- Rest of the form remains unchanged -->
 
-          <app-form-input [label]="'Test'" [placeholder]="'placeholder'" [(value)]="test" />
+          <app-form-input [label]="'Test'" [(value)]="test" />
 
           <div class="form-floating mb-4">
             <input
