--- a/client/src/app/shared/components/form-input/form-input.component.scss
+++ b/client/src/app/shared/components/form-input/form-input.component.scss
@@ -1,41 +1,58 @@
 :host {
   position: relative;
   margin-bottom: 1.5rem;
+}
 
-  input {
-    width: 100%;
-    padding: 0.75rem;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    font-size: 16px;
-    background: transparent;
-    transition:
-      border-color 0.2s,
-      padding-top 0.2s;
-  }
+input {
+  width: 100%;
+  padding: 0.75rem;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  font-size: 16px;
+  background: transparent;
+  transition:
+    border-color 0.2s,
+    padding-top 0.2s;
+}
 
-  label {
-    position: absolute;
-    top: 50%;
-    left: 10px;
-    transform: translateY(-50%);
-    transition: 0.2s ease all;
-    font-size: 16px;
-    color: #888;
-    pointer-events: none;
-  }
+input:not(:focus):not(.filled) + label {
+  top: 50%;
+  left: 10px;
+  font-size: 16px;
+  color: #888;
+}
 
-  input:focus {
-    border-color: #336b87;
-    outline: none;
-    box-shadow: 0 0 5px rgba(63, 81, 181, 0.5);
-  }
+label {
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+  transition: 0.2s ease all;
+  font-size: 16px;
+  color: #888;
+  pointer-events: none;
+}
 
-  input:focus + label,
-  input.filled + label {
-    top: -10px;
-    left: 5px;
-    font-size: 14px;
-    border-color: grey;
-  }
+input:focus {
+  border-color: #336b87;
+  outline: none;
+  box-shadow: 0 0 5px rgba(63, 81, 181, 0.5);
+}
+
+input:focus + label,
+input.filled + label {
+  top: -12.5px;
+  left: 5px;
+  font-size: 14px;
+  color: grey;
+}
+
+input.invalid {
+  border-color: #e53935;
+}
+
+.error-message {
+  color: #e53935;
+  font-size: 12px;
+  margin-top: 4px;
 }
